@@ -50,23 +50,63 @@
         </item>
         <item>
             <key> <string>_body</string> </key>
-            <value> <string>from Products.ZSQLCatalog.SQLCatalog import Query\n
+            <value> <string>from Products.ERP5Type.Utils import UpperCase\n
+from Products.ERP5.Document.Document import NotConvertedError\n
 \n
-# XXX Should we use system preference here?\n
-if \'sphinxse_index\' in container.getCatalogSearchTableIds():\n
-  query = Query(**{\'sphinxse_query\':value})\n
-else:\n
-  query = Query(**{\'full_text.SearchableText\':value})\n
-return query\n
+# Obtain the properties from the Z SQL Method itself, as like catalogObjectList.\n
+method = context.z_catalog_sphinxse_index_list\n
+property_list = method.arguments_src.split()\n
+\n
+# This below emulates what catalogObjectList is doing.\n
+portal = context.getPortalObject()\n
+document_type_list = portal.getPortalDocumentTypeList()\n
+parameter_dict = {}\n
+failed_path_list = []\n
+for path in getPath:\n
+  obj = portal.restrictedTraverse(path, None)\n
+  if obj is None:\n
+    continue\n
+\n
+  for property in property_list:\n
+    if property == \'SearchableText\':\n
+      try:\n
+        value = obj.SearchableText()\n
+      except NotConvertedError:\n
+        failed_path_list.append(path)\n
+    else:\n
+      try:\n
+        value = getattr(obj, \'get%s\' % UpperCase(property))()\n
+      except AttributeError:\n
+        value = None\n
+    parameter_dict.setdefault(property, []).append(value)\n
+\n
+if len(failed_path_list):\n
+  if len(parameter_dict):\n
+    # reregister activity for failed objects only\n
+    context.activate(activity=\'SQLQueue\', priority=5, serialization_tag=\'sphinxse_indexing\').SQLCatalog_catalogSphinxSE(getPath=failed_path_list)\n
+  else:\n
+    # if all objects are failed one, just raise an exception to avoid infinite loop.\n
+    raise NotConvertedError\n
+\n
+if len(parameter_dict):\n
+  return method(**parameter_dict)\n
 </string> </value>
         </item>
         <item>
             <key> <string>_params</string> </key>
-            <value> <string>value</string> </value>
+            <value> <string>getPath</string> </value>
+        </item>
+        <item>
+            <key> <string>_proxy_roles</string> </key>
+            <value>
+              <tuple>
+                <string>Manager</string>
+              </tuple>
+            </value>
         </item>
         <item>
             <key> <string>id</string> </key>
-            <value> <string>SQLCatalog_makeFullTextQuery</string> </value>
+            <value> <string>SQLCatalog_catalogSphinxSE</string> </value>
         </item>
       </dictionary>
     </pickle>
